# getstack-templates

cursor_python_template/: .gitignore  README.md  justfile  project_setup.py  pyproject.toml
cursor_python_template/.cursor/rules/: code.mdc
cursor_python_template/you_app_srcs/: __init__.py  __main__.py
mcp_template/: pyproject.toml
mcp_template/.cursor/rules/: code.mdc
nextjs_template/: README.md  next.config.js  package-lock.json  package.json
nextjs_template/.cursor/: mcp.json
nextjs_template/src/app/: layout.tsx  page.tsx
nextjs_template/src/app/about/: page.tsx
nextjs_template/src/components/: Button.tsx
