[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world-mcp"
version = "1.0.0"
description = "Simple Hello World MCP server template"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "MCP Developer", email = "developer@example.com"},
]

dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.32.1",
]

[project.scripts]
server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."] 